[kafka] FEATBL-1948 Feat: make some topic, producer & consumer settings tunables with /etc/bm/kafka-store.conf or sysprops.